RichwoodNew/src/objects/Specifications_Data_Base__c.object
<CustomObject>
    <fields>
        <fullName>BW_TA__c</fullName>
        <label>BW &amp; TA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Belt_Widths__c</fullName>
        <label>Belt Widths</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Density__c</fullName>
        <label>Density</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frame_Size__c</fullName>
        <label>Frame Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_CH__c</fullName>
        <label>Program CH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_CL__c</fullName>
        <label>Program CL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_WH__c</fullName>
        <label>Program WH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Specifications Data Base</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DB-{0000}</displayFormat>
        <label>Specifications Data Base</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specifications Data Bases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>